tests/samples/negative/resources/move_borrow_index_alias_after_move.ax
module move_borrow_index_alias_after_move;

fn consume<T>(values: [1]T) -> void {
}

fn inspect<T>(value: &T) -> void {
}

fn duplicate<T>(values: [1]T) -> void {
    let borrowed: &T = &values[0];
    consume(values);
    inspect(borrowed);
}

fn main() -> i32 {
    return 0;
}
